[Update] To prevent overly long label names, the text is no longer wrapped.

--- a/assets/src/css/08_Components/_label.pcss
+++ b/assets/src/css/08_Components/_label.pcss
@@ -6,4 +6,7 @@
     padding: 5px 10px;
     font-size: 12px;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
